Bug 322427 - kcm accounts crashes when a new avatar is selected
Summary: kcm accounts crashes when a new avatar is selected
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: git-latest
Platform: openSUSE Linux
: NOR crash
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-16 08:20 UTC by Alin M Elena
Modified: 2013-07-19 13:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2013-07-16 08:20:26 UTC
Application: systemsettings (4.10.95 "release 10")
KDE Platform Version: 4.10.95 "release 10"
Qt Version: 4.8.5
Operating System: Linux 3.10.0-5.ge7a8371-desktop x86_64
Distribution: "openSUSE 13.1 Milestone 3 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:
in kcm accounts for a jabber account I tried to edit the identity, selected an avatar and crash.

avatar.png: PNG image data, 251 x 250, 8-bit/color RGB, non-interlaced

The crash can be reproduced every time.

-- Backtrace:
Application: System Settings (systemsettings), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fc02e1cf780 (LWP 3032))]

Thread 2 (Thread 0x7fc00f784700 (LWP 3619)):
#0  0x00007fc02b19711d in poll () from /lib64/libc.so.6
#1  0x00007fc024129304 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fc02412940c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fc02b91f3c6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#4  0x00007fc02b8f133f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#5  0x00007fc02b8f1635 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#6  0x00007fc02b7effef in QThread::exec() () from /usr/lib64/libQtCore.so.4
#7  0x00007fc02b8d2b43 in ?? () from /usr/lib64/libQtCore.so.4
#8  0x00007fc02b7f268f in ?? () from /usr/lib64/libQtCore.so.4
#9  0x00007fc0243e7e0b in start_thread () from /lib64/libpthread.so.0
#10 0x00007fc02b1a006d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fc02e1cf780 (LWP 3032)):
[KCrash Handler]
#5  0x00007fc02c64b800 in QPixmap::isNull() const () from /usr/lib64/libQtGui.so.4
#6  0x00007fc02c64b834 in QPixmap::toImage() const () from /usr/lib64/libQtGui.so.4
#7  0x00007fc02d358443 in KPixmapRegionSelectorWidget::selectedImage() const () from /usr/lib64/libkdeui.so.5
#8  0x00007fc012301587 in AvatarButton::cropPixmap (this=this@entry=0x1004c00, pixmap=..., maxWidth=maxWidth@entry=128, maxHeight=maxHeight@entry=128, minWidth=minWidth@entry=64, minHeight=minHeight@entry=64) at /usr/src/debug/ktp-accounts-kcm-0.6.666.git.1373883031/src/avatar-button.cpp:178
#9  0x00007fc01230203a in AvatarButton::onLoadAvatarFromFile (this=0x1004c00) at /usr/src/debug/ktp-accounts-kcm-0.6.666.git.1373883031/src/avatar-button.cpp:134
#10 0x00007fc02b9063b8 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#11 0x00007fc02c57a752 in QAction::triggered(bool) () from /usr/lib64/libQtGui.so.4
#12 0x00007fc02c57c123 in QAction::activate(QAction::ActionEvent) () from /usr/lib64/libQtGui.so.4
#13 0x00007fc02c9a5429 in ?? () from /usr/lib64/libQtGui.so.4
#14 0x00007fc02c9a9979 in ?? () from /usr/lib64/libQtGui.so.4
#15 0x00007fc02d34e625 in KMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libkdeui.so.5
#16 0x00007fc02c5cfe5e in QWidget::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#17 0x00007fc02c9ad75b in QMenu::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#18 0x00007fc02c5808ac in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#19 0x00007fc02c586fad in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#20 0x00007fc02d2980ca in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#21 0x00007fc02b8f26dd in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#22 0x00007fc02c586763 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQtGui.so.4
#23 0x00007fc02c5f830c in ?? () from /usr/lib64/libQtGui.so.4
#24 0x00007fc02c5f6a4c in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/libQtGui.so.4
#25 0x00007fc02c61d902 in ?? () from /usr/lib64/libQtGui.so.4
#26 0x00007fc024129016 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#27 0x00007fc024129368 in ?? () from /usr/lib64/libglib-2.0.so.0
#28 0x00007fc02412940c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#29 0x00007fc02b91f3c6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#30 0x00007fc02c61d9b6 in ?? () from /usr/lib64/libQtGui.so.4
#31 0x00007fc02b8f133f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#32 0x00007fc02b8f1635 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#33 0x00007fc02c9ac547 in QMenu::exec(QPoint const&, QAction*) () from /usr/lib64/libQtGui.so.4
#34 0x00007fc02c9e4e85 in ?? () from /usr/lib64/libQtGui.so.4
#35 0x00007fc02c9e5539 in ?? () from /usr/lib64/libQtGui.so.4
#36 0x00007fc02b9063b8 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#37 0x00007fc02c92d876 in ?? () from /usr/lib64/libQtGui.so.4
#38 0x00007fc02c92de1c in QAbstractButton::mousePressEvent(QMouseEvent*) () from /usr/lib64/libQtGui.so.4
#39 0x00007fc02c9e5898 in QToolButton::mousePressEvent(QMouseEvent*) () from /usr/lib64/libQtGui.so.4
#40 0x00007fc02c5cfcd1 in QWidget::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#41 0x00007fc02c5808ac in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#42 0x00007fc02c586fad in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#43 0x00007fc02d2980ca in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#44 0x00007fc02b8f26dd in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#45 0x00007fc02c586763 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQtGui.so.4
#46 0x00007fc02c5f7fdb in ?? () from /usr/lib64/libQtGui.so.4
#47 0x00007fc02c5f6a4c in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/libQtGui.so.4
#48 0x00007fc02c61d902 in ?? () from /usr/lib64/libQtGui.so.4
#49 0x00007fc024129016 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#50 0x00007fc024129368 in ?? () from /usr/lib64/libglib-2.0.so.0
#51 0x00007fc02412940c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#52 0x00007fc02b91f3a5 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#53 0x00007fc02c61d9b6 in ?? () from /usr/lib64/libQtGui.so.4
#54 0x00007fc02b8f133f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#55 0x00007fc02b8f1635 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#56 0x00007fc02ca2307c in QDialog::exec() () from /usr/lib64/libQtGui.so.4
#57 0x00007fc01230f37e in KCMTelepathyAccounts::onEditIdentityClicked (this=0xe11840) at /usr/src/debug/ktp-accounts-kcm-0.6.666.git.1373883031/src/kcm-telepathy-accounts.cpp:401
#58 0x00007fc02b9063b8 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#59 0x00007fc02cbc9902 in QAbstractButton::clicked(bool) () from /usr/lib64/libQtGui.so.4
#60 0x00007fc02c92d7e3 in ?? () from /usr/lib64/libQtGui.so.4
#61 0x00007fc02c92e953 in ?? () from /usr/lib64/libQtGui.so.4
#62 0x00007fc02c92ea3c in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libQtGui.so.4
#63 0x00007fc02c5cfe5e in QWidget::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#64 0x00007fc02c5808ac in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#65 0x00007fc02c586fad in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#66 0x00007fc02d2980ca in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#67 0x00007fc02b8f26dd in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#68 0x00007fc02c586763 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQtGui.so.4
#69 0x00007fc02c5f7fdb in ?? () from /usr/lib64/libQtGui.so.4
#70 0x00007fc02c5f6a4c in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/libQtGui.so.4
#71 0x00007fc02c61d902 in ?? () from /usr/lib64/libQtGui.so.4
#72 0x00007fc024129016 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#73 0x00007fc024129368 in ?? () from /usr/lib64/libglib-2.0.so.0
#74 0x00007fc02412940c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#75 0x00007fc02b91f3a5 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#76 0x00007fc02c61d9b6 in ?? () from /usr/lib64/libQtGui.so.4
#77 0x00007fc02b8f133f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#78 0x00007fc02b8f1635 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#79 0x00007fc02b8f676b in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#80 0x000000000040b54b in ?? ()
#81 0x00007fc02b0d9a35 in __libc_start_main () from /lib64/libc.so.6
#82 0x000000000040b5a1 in _start ()

Reported using DrKonqi
Comment 1 David Edmundson 2013-07-16 13:16:18 UTC
Backtrace looks good, confirming.
Comment 2 David Edmundson 2013-07-19 13:00:14 UTC
Git commit febaa0f51835e481131191fc5b6412071f923bf4 by David Edmundson.
Committed on 19/07/2013 at 12:59.
Pushed by davidedmundson into branch 'master'.

Don't run dialog to select region of pixmap for empty pixmaps

M  +6    -1    src/avatar-button.cpp

http://commits.kde.org/telepathy-accounts-kcm/febaa0f51835e481131191fc5b6412071f923bf4