Don't run dialog to select region of pixmap for empty pixmaps

BUG: 322427